# FBC-course

./: .clang-format  .gitignore  .pre-commit-config.yaml  README.md
Practice/HW/: HW.out  HelloWorld.cpp
Set1/: .exercise1.cpp.swp  .metadata.txt.swp  .set1info.txt.swp  hello.cc  metadata.txt  set1info.txt
Set1/01/: .exercise1info.txt.swp  exercise1info.txt  hello.cc  order.txt
Set1/02/: exercise2info.txt
Set1/03/: exercise3info.txt
Set1/04/: exercise4.cc  exercise4info.txt  order.txt
Set1/05/: .exercise5.cc.swp  exercise5.cc  exercise5info.txt  order.txt
Set1/06/: .exercise6info.txt.swp  a.out  exercise6.cc  exercise6info.txt  order.txt
Set1/07/: exercise7.cc  exercise7info.txt  order.txt
Set1/08/: a.out  exercise8.cc  exercise8info.txt  order.txt
Set1/Exercise1/: exercise1info.txt  hello  hello.cc
Set1/Exercise2/: exercise2info.txt
Set1/Exercise3/: exercise3info.txt
Set1/Exercise6/: a.out  (+3 more)
Set2Feedback/: metadata.txt
Set3/: metadata.txt
Set3/17/: .exercise17info.txt.swp  .findDouble.cc.swp  .sum.h.swp  .sum.ih.swp  .sum2.cc.swp  CMakeLists.txt  Makefile2  SumHeader  SumHeader.h  ex17.ih  ex17info.txt  exercise17info.txt  findDouble.cc  main  main.cc  main.ih  order.txt  sum.h  sum.ih  sum1.cc  sum2.cc
Set3/17/generated_deps/: ex17.ih.dep  main.cc.dep  sum1.cc.dep  sum2.cc.dep
Set4/: metadata.txt
Set5/: metadata.txt
Set5Feedback/: metadata.txt
Set6/: metadata.txt
part2/: README.md
rules/: max_line_width.py
set2/: metadata.txt
set7/: CLASSES  metadata.txt  spch
set8/: CLASSES  icmconf  metadata.txt
utilities/: icmconf
(+3438 files in other folders)
